2004-10-25 Vincent van Adrighem  <adrighem@gnome.org>

	* debian/*: Added a debian subdir. This dir contains buildscripts
	    for debian.

2004-10-22 Bart Hakvoort  <gparted@users.sf.net>

	* configure.in: bumped to version 0.0.6

2004-10-22 Bart Hakvoort  <gparted@users.sf.net>

	* configure.in: libpartedcheck now looks for correct version number (finally i'll be rid off those stupid bugreports =) )

2004-10-22 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_Partition_Info.cc: codecleanups.. Hey! i was bored :P

2004-10-22 Bart Hakvoort  <gparted@users.sf.net>

	* src/Device.cc: removed libparted messagesdialog. instead, show them on the console. They proved to be pretty useless.
	* src/Win_GParted.cc: fixed crasher when loading gparted (or refresh devices) while there's a (audio) cd in the cdrom-drive.

2004-10-21 Bart Hakvoort  <gparted@users.sf.net>

	* configure.in: modernized use of AM_INIT_AUTOMAKE a bit (according to 
	http://www.gnu.org/software/automake/manual/html_node/Public-macros.html#Public%20macros)

2004-10-21 Bart Hakvoort  <gparted@users.sf.net>

	* include/Dialog_Partition_Resize_Move.h,
	  src/Dialog_Partition_Resize_Move.cc: fixed some bugs with minimum size of resizable partition + some codecleanups.

2004-10-20 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_Base_Partition.cc (Get_New_Partition): Tweaked resizingbehaviour a bit. This solved some minor annoyances.

2004-10-18 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_Partition_New.cc: changed width of optionmenus from 150 to 160 pixels. (in certain langs the strings didn't fit)
	* src/VBox_VisualDisk.cc: used/unused legend doesn't have to show up if there's only linux-swap. 

2004-10-17 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_About.cc (Show_Credits): Fixed Gtk-Warning with unknown pango markup and placed a 5 pixel-border around 
	translators credits.

2004-10-16 Bart Hakvoort  <gparted@users.sf.net>
	