@@ -29,8 +29,11 @@ AC_PROG_INTLTOOL
 dnl======================
 dnl checks for libs 
 dnl======================
+AC_CHECK_LIB(uuid, uuid_generate, [], AC_MSG_ERROR([*** uuid library (libuuid) not found]))
+AC_CHECK_LIB(dl, dlopen,          [], AC_MSG_ERROR([*** dl library (libdl) not found]))
+
 AC_PATH_PROG(PARTED_PATH, parted, [], /sbin /usr/sbin /usr/local/sbin)
-if ! (( ($( $PARTED_PATH --version | cut -d. -f3 )) > 12 )) 2>/dev/null
+if ! (( ($( $PARTED_PATH --version | cut -d. -f3 | cut -d' ' -f1 )) > 12 )) 2>/dev/null
 then
 	AC_MSG_ERROR([*** libparted >= 1.6.13 not installed - get it from http://www.gnu.org/software/parted/ ***])
 fi
